Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80813

generator.cpp:445:26: error: ‘class QHash<QByteArray, QByteArray>’ has no member named ‘unite’

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.15
    • 5.15
    • State Machine: SCXML
    • None
    • Android, Integrity, iOS/tvOS/watchOS, Linux/Other display system, QNX, WebAssembly, WinRT
    • f66312ce38e083d8c1873b7c61702b2e88f229b1

      https://codereview.qt-project.org/c/qt/qt5/+/280691 Update submodules on '5.15' in qt/qt5 - PS41

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1576477333

      https://testresults.qt.io/coin/api/results/qt/qtscxml/c045faa904208ceeedb2f9a43e0a27b85884c20b/LinuxUbuntu_18_04x86_64LinuxQEMUarmv7GCCqtci-linux-Ubuntu-18.04-x86_64-ca0cfe/f7e309afa7dfaee4c7d1ed6218b69f2654e77705/build_1576477716/log.txt.gz

      agent:2019/12/16 06:31:05 build.go:220: generator.cpp: In member function ‘void Generator::generateCode()’:
      agent:2019/12/16 06:31:05 build.go:220: generator.cpp:445:26: error: ‘class QHash<QByteArray, QByteArray>’ has no member named ‘unite’
      agent:2019/12/16 06:31:05 build.go:220:   445 |     knownExtraMetaObject.unite(knownQObjectClasses);
      agent:2019/12/16 06:31:05 build.go:220:       |                          ^~~~~
      agent:2019/12/16 06:31:06 build.go:220: Makefile:512: recipe for target '.obj/generator.o' failed
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            liaqi Liang Qi
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes