qscxmlc: Avoid QHash::unite()

As we don't have QHash::insert(QHash), yet, we have to iterate for now.

Task-number: QTBUG-80813
Change-Id: I2288a9d35362556a7cc869cfa7b0d51fb88a2c4e
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>